--- a/ivikee7.github.io/package.json
+++ b/ivikee7.github.io/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-gatsby-site",
+  "name": "7tech-tips",
   "version": "1.0.0",
   "private": true,
-  "description": "my-gatsby-site",
+  "description": "7tech-tips",
   "keywords": [
     "gatsby"
   ],
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "gatsby": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-mdx": "^5.14.0",
