--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.4",
+    "@types/mdx": "^2.0.13",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -13,6 +17,9 @@
   "devDependencies": {
     "@types/node": "22.10.1",
     "@types/react": "18.3.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   }
 }
