--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = '//ivikee7.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = '7TechTips'
