--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.2",
-    "gray-matter": "^4.0.3",
+    "@types/mdx": "^2.0.13",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
