--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -23,25 +23,9 @@ jobs:
       - name: Build Docusaurus
         run: npm run build
 
-      # Example: Deploy to GitHub Pages (uncomment and configure if needed)
-      #- name: Deploy to GitHub Pages
-      #  if: github.ref == 'refs/heads/main'
-      #  uses: peaceiris/actions-gh-pages@v3
-      #  with:
-      #    github_token: ${{ secrets.GITHUB_TOKEN }}
-      #    publish_dir: ./build
-
-  # Example: Add a test job if you have tests
-  # test:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 'lts/*'
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: Run tests
-  #       run: npm run test # Or your test script
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/main'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
